Almost Finished Assignment

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,10 +1,14 @@
 ---
 title: "Reproducible Research: Peer Assessment 1"
 output: 
-  html_document:
-    keep_md: true
+  html_document: 
+    keep_md: yes
 ---
 
+```{r,include=FALSE}
+knitr::opts_chunk$set(message=FALSE, warning=FALSE)
+
+```
 
 ## Loading and preprocessing the data
 
@@ -20,14 +24,85 @@ str(data)
 
 ## What is mean total number of steps taken per day?
 
+```{r}
+library(dplyr,quietly = TRUE)
 
+total_steps=data %>% group_by(date) %>% summarise(steps_per_day=sum(steps,na.rm = T))
+
+hist(total_steps$steps_per_day,col = "blue",xlab = "Steps per Day",main = "Histogram")
+
+
+```
+
+
+```{r}
+
+meansteps=format(mean(total_steps$steps_per_day,na.rm = TRUE),digits=2)
+mediansteps=format(median(total_steps$steps_per_day,na.rm = TRUE),digits=2)
+
+```
+
+The **mean** total number of steps taken per day **`r meansteps`**.  
+
+The **median** total number of steps taken per day **`r mediansteps`**.  
 
 ## What is the average daily activity pattern?
 
+```{r}
+library(ggplot2)
+data %>% 
+  group_by(interval) %>% 
+  summarise(steps=mean(steps,na.rm = TRUE)) %>%  ggplot(aes(x = interval,y=steps))+
+    geom_line() + 
+    geom_hline(aes(yintercept = mean(data$steps,na.rm=TRUE),linetype="Average"),color="blue",show.legend = TRUE)
 
+maximo=data %>% 
+  group_by(interval) %>% 
+  summarise(steps=mean(steps,na.rm = TRUE)) %>% filter(steps==max(steps))
+```
+The interval with the maximum number of steps on average is **`r maximo$interval`** with **`r maximo$steps`** steps.  
 
 ## Imputing missing values
+```{r}
+#Calculate the number of missing values
+length(which(is.na(data$steps)))
 
+#Create a dataset
+average=data %>% 
+  group_by(interval) %>% 
+  summarise(steps=mean(steps,na.rm = TRUE))
+
+navalues=left_join(data %>% filter(is.na(steps)),average,by="interval") %>% 
+      mutate(steps=steps.y) %>% select(date,interval,steps)
+
+data$steps[which(is.na(data$steps))]=navalues$steps
+
+newdf=data
+newtotal=newdf %>% group_by(date) %>% summarise(steps_per_day=sum(steps,na.rm = T)) 
+
+hist(newtotal$steps_per_day,col = "blue",xlab = "Steps per Day",main = "Histogram")
+
+newmeansteps=format(mean(newtotal$steps_per_day,na.rm = TRUE),digits=2)
+newmediansteps=format(median(newtotal$steps_per_day,na.rm = TRUE),digits=2)
+```
+
+The **new mean** total number of steps taken per day **`r newmeansteps`** in contrast with the previous amount of **`r meansteps`** .  
+
+The **new median** total number of steps taken per day **`r newmediansteps`** in contrast with the previous amount of **`r mediansteps`** .  
+
+The mean and median are not the same using my method, which was assigning the average value of the interval to the intervals in which we had NAs. 
 
 
 ## Are there differences in activity patterns between weekdays and weekends?
+
+```{r}
+newdf=newdf %>% mutate(day=weekdays(date)) 
+
+newdf$week=c("Weekday")
+newdf$week[grep(x=newdf$day,pattern = "^S")]="Weekend"
+
+newdf %>% group_by(week,interval) %>% summarize(steps=mean(steps)) %>%  ggplot(aes(interval,steps)) + geom_line(aes(color=week),show.legend = FALSE) + facet_grid(.~week)
+
+
+```
+
